--- a/templates/post.html
+++ b/templates/post.html
@@ -9,10 +9,9 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="post-heading">
             <h1>{{post.Title}}</h1>
-            <h2 class="subheading">Problems look mighty small from 150 miles up</h2>
-            <span class="meta">Posted by
-              <a href="#">Start Bootstrap</a>
-              on August 24, 2019</span>
+            <span class="meta">
+              <a href="#"></a>
+              </span>
           </div>
         </div>
       </div>
@@ -27,8 +26,6 @@
          {{post.Content}}
             
         </div>
-         }
-         }
       </div>
     </div>
   </article>
